compiler/src/CS/CSParser.py
# Generated from C:/Users/vooco/Documents/PPL_252/ASSIGNMENT_1/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
from typing import TextIO


class CSParser ( Parser ):

    grammarFileName = "CS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'case'", "'continue'", 
                     "'default'", "'else'", "'float'", "'for'", "'if'", 
                     "'int'", "'return'", "'string'", "'struct'", "'switch'", 
                     "'void'", "'while'", "'+'", "'-'", "'*'", "'/'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'%'", "'||'", 
                     "'&&'", "'!'", "'++'", "'--'", "'='", "'.'", "'{'", 
                     "'}'", "'('", "')'", "';'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FLOAT", "FOR", "IF", "INT", "RETURN", 
                      "STRING", "STRUCT", "SWITCH", "VOID", "WHILE", "PLUS", 
                      "SUB", "MUL", "DIV", "EQ", "NEQ", "LT", "GT", "LTE", 
                      "GTE", "MOD", "OR", "AND", "NOT", "INCRE", "DECRE", 
                      "ASSIGN", "ACCESS", "LBRACE", "RBRACE", "LPAREN", 
                      "RPAREN", "SEMI", "COMMA", "COLON", "ID", "INT_LIT", 
                      "FLOAT_LIT", "STRING_LIT", "WS", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_list_expression = 0
    RULE_expression = 1
    RULE_expression1 = 2
    RULE_expression2 = 3
    RULE_expression3 = 4
    RULE_expression4 = 5
    RULE_expression5 = 6
    RULE_expression6 = 7
    RULE_expression7 = 8
    RULE_expression8 = 9
    RULE_expression9 = 10
    RULE_expression10 = 11
    RULE_expression11 = 12
    RULE_function_call = 13
    RULE_lhs = 14
    RULE_literal = 15
    RULE_struct_literal = 16
    RULE_all_type = 17
    RULE_primitive_type = 18
    RULE_var_type = 19
    RULE_function_type = 20
    RULE_list_statement = 21
    RULE_statement = 22
    RULE_var_statement = 23
    RULE_init_value = 24
    RULE_block_statement = 25
    RULE_if_statement = 26
    RULE_while_statement = 27
    RULE_for_statement = 28
    RULE_for_init = 29
    RULE_assign_init = 30
    RULE_for_update = 31
    RULE_switch_statement = 32
    RULE_case_section = 33
    RULE_default_section = 34
    RULE_break_statement = 35
    RULE_continue_statement = 36
    RULE_expression_statement = 37
    RULE_return_statement = 38
    RULE_program = 39
    RULE_structs = 40
    RULE_struct_body = 41
    RULE_explicit_type = 42
    RULE_functions = 43
    RULE_list_parameter = 44
    RULE_parameter = 45

    ruleNames =  [ "list_expression", "expression", "expression1", "expression2", 
                   "expression3", "expression4", "expression5", "expression6", 
                   "expression7", "expression8", "expression9", "expression10", 
                   "expression11", "function_call", "lhs", "literal", "struct_literal", 
                   "all_type", "primitive_type", "var_type", "function_type", 
                   "list_statement", "statement", "var_statement", "init_value", 
                   "block_statement", "if_statement", "while_statement", 
                   "for_statement", "for_init", "assign_init", "for_update", 
                   "switch_statement", "case_section", "default_section", 
                   "break_statement", "continue_statement", "expression_statement", 
                   "return_statement", "program", "structs", "struct_body", 
                   "explicit_type", "functions", "list_parameter", "parameter" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    CASE=3
    CONTINUE=4
    DEFAULT=5
    ELSE=6
    FLOAT=7
    FOR=8
    IF=9
    INT=10
    RETURN=11
    STRING=12
    STRUCT=13
    SWITCH=14
    VOID=15
    WHILE=16
    PLUS=17
    SUB=18
    MUL=19
    DIV=20
    EQ=21
    NEQ=22
    LT=23
    GT=24
    LTE=25
    GTE=26
    MOD=27
    OR=28
    AND=29
    NOT=30
    INCRE=31
    DECRE=32
    ASSIGN=33
    ACCESS=34
    LBRACE=35
    RBRACE=36
    LPAREN=37
    RPAREN=38
    SEMI=39
    COMMA=40
    COLON=41
    ID=42
    INT_LIT=43
    FLOAT_LIT=44
    STRING_LIT=45
    WS=46
    BLOCK_COMMENT=47
    LINE_COMMENT=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class List_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CSParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.COMMA)
            else:
                return self.getToken(CSParser.COMMA, i)

        def getRuleIndex(self):
            return CSParser.RULE_list_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_expression" ):
                return visitor.visitList_expression(self)
            else:
                return visitor.visitChildren(self)




    def list_expression(self):

        localctx = CSParser.List_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_list_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.expression()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 93
                self.match(CSParser.COMMA)
                self.state = 94
                self.expression()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs(self):
            return self.getTypedRuleContext(CSParser.LhsContext,0)


        def ASSIGN(self):
            return self.getToken(CSParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(CSParser.ExpressionContext,0)


        def expression1(self):
            return self.getTypedRuleContext(CSParser.Expression1Context,0)


        def getRuleIndex(self):
            return CSParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = CSParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.lhs()
                self.state = 101
                self.match(CSParser.ASSIGN)
                self.state = 102
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.expression1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSParser.Expression2Context)
            else:
                return self.getTypedRuleContext(CSParser.Expression2Context,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.OR)
            else:
                return self.getToken(CSParser.OR, i)

        def getRuleIndex(self):
            return CSParser.RULE_expression1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression1" ):
                return visitor.visitExpression1(self)
            else:
                return visitor.visitChildren(self)




    def expression1(self):

        localctx = CSParser.Expression1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.expression2()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 108
                self.match(CSParser.OR)
                self.state = 109
                self.expression2()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression3(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSParser.Expression3Context)
            else:
                return self.getTypedRuleContext(CSParser.Expression3Context,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.AND)
            else:
                return self.getToken(CSParser.AND, i)

        def getRuleIndex(self):
            return CSParser.RULE_expression2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression2" ):
                return visitor.visitExpression2(self)
            else:
                return visitor.visitChildren(self)




    def expression2(self):

        localctx = CSParser.Expression2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expression2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.expression3()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 116
                self.match(CSParser.AND)
                self.state = 117
                self.expression3()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression4(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSParser.Expression4Context)
            else:
                return self.getTypedRuleContext(CSParser.Expression4Context,i)


        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.EQ)
            else:
                return self.getToken(CSParser.EQ, i)

        def NEQ(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.NEQ)
            else:
                return self.getToken(CSParser.NEQ, i)

        def getRuleIndex(self):
            return CSParser.RULE_expression3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression3" ):
                return visitor.visitExpression3(self)
            else:
                return visitor.visitChildren(self)




    def expression3(self):

        localctx = CSParser.Expression3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression3)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.expression4()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21 or _la==22:
                self.state = 124
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 125
                self.expression4()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression5(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSParser.Expression5Context)
            else:
                return self.getTypedRuleContext(CSParser.Expression5Context,i)


        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.LT)
            else:
                return self.getToken(CSParser.LT, i)

        def LTE(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.LTE)
            else:
                return self.getToken(CSParser.LTE, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.GT)
            else:
                return self.getToken(CSParser.GT, i)

        def GTE(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.GTE)
            else:
                return self.getToken(CSParser.GTE, i)

        def getRuleIndex(self):
            return CSParser.RULE_expression4

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression4" ):
                return visitor.visitExpression4(self)
            else:
                return visitor.visitChildren(self)




    def expression4(self):

        localctx = CSParser.Expression4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression4)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.expression5()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 125829120) != 0):
                self.state = 132
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 125829120) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 133
                self.expression5()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression5Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression6(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSParser.Expression6Context)
            else:
                return self.getTypedRuleContext(CSParser.Expression6Context,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.PLUS)
            else:
                return self.getToken(CSParser.PLUS, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.SUB)
            else:
                return self.getToken(CSParser.SUB, i)

        def getRuleIndex(self):
            return CSParser.RULE_expression5

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression5" ):
                return visitor.visitExpression5(self)
            else:
                return visitor.visitChildren(self)




    def expression5(self):

        localctx = CSParser.Expression5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expression5)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.expression6()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17 or _la==18:
                self.state = 140
                _la = self._input.LA(1)
                if not(_la==17 or _la==18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 141
                self.expression6()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression6Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression7(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSParser.Expression7Context)
            else:
                return self.getTypedRuleContext(CSParser.Expression7Context,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.MUL)
            else:
                return self.getToken(CSParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.DIV)
            else:
                return self.getToken(CSParser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.MOD)
            else:
                return self.getToken(CSParser.MOD, i)

        def getRuleIndex(self):
            return CSParser.RULE_expression6

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression6" ):
                return visitor.visitExpression6(self)
            else:
                return visitor.visitChildren(self)




    def expression6(self):

        localctx = CSParser.Expression6Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression6)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.expression7()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 135790592) != 0):
                self.state = 148
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 135790592) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 149
                self.expression7()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression7Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression7(self):
            return self.getTypedRuleContext(CSParser.Expression7Context,0)


        def NOT(self):
            return self.getToken(CSParser.NOT, 0)

        def SUB(self):
            return self.getToken(CSParser.SUB, 0)

        def PLUS(self):
            return self.getToken(CSParser.PLUS, 0)

        def expression8(self):
            return self.getTypedRuleContext(CSParser.Expression8Context,0)


        def getRuleIndex(self):
            return CSParser.RULE_expression7

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression7" ):
                return visitor.visitExpression7(self)
            else:
                return visitor.visitChildren(self)




    def expression7(self):

        localctx = CSParser.Expression7Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression7)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17, 18, 30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1074135040) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 156
                self.expression7()
                pass
            elif token in [31, 32, 35, 37, 42, 43, 44, 45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.expression8()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression8Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression8(self):
            return self.getTypedRuleContext(CSParser.Expression8Context,0)


        def INCRE(self):
            return self.getToken(CSParser.INCRE, 0)

        def DECRE(self):
            return self.getToken(CSParser.DECRE, 0)

        def expression9(self):
            return self.getTypedRuleContext(CSParser.Expression9Context,0)


        def getRuleIndex(self):
            return CSParser.RULE_expression8

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression8" ):
                return visitor.visitExpression8(self)
            else:
                return visitor.visitChildren(self)




    def expression8(self):

        localctx = CSParser.Expression8Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expression8)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                _la = self._input.LA(1)
                if not(_la==31 or _la==32):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 161
                self.expression8()
                pass
            elif token in [35, 37, 42, 43, 44, 45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.expression9()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression9Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression10(self):
            return self.getTypedRuleContext(CSParser.Expression10Context,0)


        def INCRE(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.INCRE)
            else:
                return self.getToken(CSParser.INCRE, i)

        def DECRE(self, i:int=None):
            if i is None:
                return self.getTokens(CSParser.DECRE)
            else:
                return self.getToken(CSParser.DECRE, i)

        def getRuleIndex(self):
            return CSParser.RULE_expression9

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression9" ):
                return visitor.visitExpression9(self)
            else:
                return visitor.visitChildren(self)




    def expression9(self):

        localctx = CSParser.Expression9Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression9)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.expression10(0)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31 or _la==32:
                self.state = 166
                _la = self._input.LA(1)
                if not(_la==31 or _la==32):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression10Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression11(self):
            return self.getTypedRuleContext(CSParser.Expression11Context,0)


        def expression10(self):
            return self.getTypedRuleContext(CSParser.Expression10Context,0)


        def ACCESS(self):
            return self.getToken(CSParser.ACCESS, 0)

        def ID(self):
            return self.getToken(CSParser.ID, 0)

        def getRuleIndex(self):
            return CSParser.RULE_expression10

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression10" ):
                return visitor.visitExpression10(self)
            else:
                return visitor.visitChildren(self)



    def expression10(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CSParser.Expression10Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expression10, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.expression11()
            self._ctx.stop = self._input.LT(-1)
            self.state = 180
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CSParser.Expression10Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression10)
                    self.state = 175
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 176
                    self.match(CSParser.ACCESS)
                    self.state = 177
                    self.match(CSParser.ID) 
                self.state = 182
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expression11Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(CSParser.LiteralContext,0)


        def struct_literal(self):
            return self.getTypedRuleContext(CSParser.Struct_literalContext,0)

